<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <!-- Simple strings -->
    <string name="app_name">GliaECG</string>
    <string name="alert_name">Alert</string>
    <string name="confirm_btn">OK</string>

    <string name="ecg_layout">ecg_layout</string>
    <string name="gl_surface_view">m_view</string>
    <string name="menu_button_1">PAUSE</string>
    <string name="menu_button_1_alt">RESUME</string>
    <string name="menu_button_2">SAVE</string>
    <string name="menu_button_2_alt">STOP</string>
    <string name="menu_button_3">RHYTHM</string>
    <string name="menu_button_3_alt">12-LEAD</string>
    <string name="menu_button_4">PATIENT</string>

    <string name="input_popup_title">PATIENT DATA</string>
    <string name="id_text">ID:</string>
    <string name="surname_text">LAST NAME:</string>
    <string name="name_text">FIRST NAME:</string>
    <string name="birth_date_text">DATE OF BIRTH:</string>
    <string name="birth_date_hint">format: dd.mm.yyyy</string>
    <string name="archive_btn">ARCHIVE</string>
    <string name="advanced_set_btn">ADVANCED SETTINGS</string>
    <string name="new_btn">NEW</string>

    <string name="x_speed_text">Paper speed:</string>
    <string name="x_speed_25">25 mm/s</string>
    <string name="x_speed_50">50 mm/s</string>
    <string name="save_loc_text">Save location folder name:</string>
    <string name="save_loc_hint">Insert folder name</string>
    <string name="switch_text">Auto print on save:</string>
    <string name="about_btn">ABOUT</string>

    <string name="question_print_measur">Would you like to print your measurement?</string>
    <string name="print_btn">PRINT</string>
    <string name="cancel_btn">CANCEL</string>

    <string name="question_save_measur">Current patient measurement was not yet saved. Would you like to save it now?</string>
    <string name="yes_btn">YES</string>
    <string name="no_btn">NO</string>

    <string name="search_text">Search</string>
    <string name="empty_archive">No files found :(</string>

    <string name="irnas_text">Made by Institute IRNAS</string>
    <string name="visit_web">Visit website</string>
    <string name="license_name">License</string>

    <!-- Complex strings -->
    <string name="license_text_1">
        All projects of Institute IRNAS are as usefully open-source as possible.
        \nHardware including documentation is licensed under CERN OHL v.1.2. license.
        \nFirmware and software originating from the project is licensed under GNU GENERAL PUBLIC LICENSE v3.
        \nOpen data generated by our projects is licensed under CC0.
        \nAll our websites and additional documentation are licensed under Creative Commons Attribution-ShareAlike 4 .0 Unported License.
    </string>
    <string name="license_text_2">
        \nWhat this means is that you can use hardware, firmware, software and documentation without paying a royalty and knowing that
        you\'ll be able to use your version forever. You are also free to make changes but if you share these changes then you have to
        do so on the same conditions that you enjoy.
        \n\nKoruza, GoodEnoughCNC and IRNAS are all names and marks of Institut IRNAS Rače. You may use these names and terms only to
        attribute the appropriate entity as required by the Open Licences referred to above. You may not use them in any other way
        and in particular you may not use them to imply endorsement or authorization of any hardware that you design, make or sell.
    </string>
    <string name="app_description">
        Glia is a project with the goal of releasing high quality free/open medical hardware to increase availability to those who need it. \n
        For more information visit Glia Free Medical hardware webpage: https://glia.org/.
    </string>
</resources>

