<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/advanced_popup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_set_btn"
        android:textSize="25sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/speed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/x_speed_text"
                android:textSize="20sp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/pap_speed_25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/x_speed_25"/>
                <RadioButton
                    android:id="@+id/pap_speed_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/x_speed_50"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_loc_text"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:id="@+id/save_location"
            android:background="@color/patient_background"
            android:hint="@string/save_loc_hint"
            android:enabled="false"
            android:inputType="text"/>
        <!-- editing this field is disabled -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:gravity="center_vertical"
                android:text="@string/switch_text"
                android:textSize="20sp"/>

            <ToggleButton
                android:id="@+id/toggle1"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

        </LinearLayout>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/confirm_btn"/>

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="7dp"
            android:textSize="18sp"
            android:text="@string/about_btn" />

    </LinearLayout>
</RelativeLayout>